fix(ix): deal with overflowing editors

--- a/client/src/lit/interactive-example/index.scss
+++ b/client/src/lit/interactive-example/index.scss
@@ -180,6 +180,7 @@ tab-wrapper {
     "choice runner";
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
   grid-template-rows: max-content 1fr;
+  height: 100%;
 
   @media (max-width: $screen-lg) {
     grid-template-areas: "header" "choice" "runner";
@@ -211,7 +212,7 @@ tab-wrapper {
     display: flex;
     flex-direction: column;
     grid-area: choice;
-    overflow: scroll;
+    overflow-y: auto;
     padding: 1rem;
     padding-right: 0;
     row-gap: 0.4rem;
